# backend/gen/exercises/endpoints.go
@@ -1,11 +1,11 @@
 // Code generated by goa v3.23.3, DO NOT EDIT.
 //
-// exercise endpoints
+// exercises endpoints
 //
 // Command:
 // $ goa gen github.com/GrudTrigger/training_tracker/backend/design
 
-package exercise
+package exercises
 
 import (
 	"context"
@@ -13,7 +13,7 @@ import (
 	goa "goa.design/goa/v3/pkg"
 )
 
-// Endpoints wraps the "exercise" service endpoints.
+// Endpoints wraps the "exercises" service endpoints.
 type Endpoints struct {
 	Create goa.Endpoint
 	All    goa.Endpoint
@@ -21,7 +21,7 @@ type Endpoints struct {
 	Delete goa.Endpoint
 }
 
-// NewEndpoints wraps the methods of the "exercise" service with endpoints.
+// NewEndpoints wraps the methods of the "exercises" service with endpoints.
 func NewEndpoints(s Service) *Endpoints {
 	return &Endpoints{
 		Create: NewCreateEndpoint(s),
@@ -31,7 +31,7 @@ func NewEndpoints(s Service) *Endpoints {
 	}
 }
 
-// Use applies the given middleware to all the "exercise" service endpoints.
+// Use applies the given middleware to all the "exercises" service endpoints.
 func (e *Endpoints) Use(m func(goa.Endpoint) goa.Endpoint) {
 	e.Create = m(e.Create)
 	e.All = m(e.All)
@@ -40,16 +40,16 @@ func (e *Endpoints) Use(m func(goa.Endpoint) goa.Endpoint) {
 }
 
 // NewCreateEndpoint returns an endpoint function that calls the method
-// "create" of service "exercise".
+// "create" of service "exercises".
 func NewCreateEndpoint(s Service) goa.Endpoint {
 	return func(ctx context.Context, req any) (any, error) {
-		p := req.(*ExerciseListPayload)
+		p := req.(*ExercisePayload)
 		return s.Create(ctx, p)
 	}
 }
 
 // NewAllEndpoint returns an endpoint function that calls the method "all" of
-// service "exercise".
+// service "exercises".
 func NewAllEndpoint(s Service) goa.Endpoint {
 	return func(ctx context.Context, req any) (any, error) {
 		p := req.(*AllPayload)
@@ -58,7 +58,7 @@ func NewAllEndpoint(s Service) goa.Endpoint {
 }
 
 // NewUpdateEndpoint returns an endpoint function that calls the method
-// "update" of service "exercise".
+// "update" of service "exercises".
 func NewUpdateEndpoint(s Service) goa.Endpoint {
 	return func(ctx context.Context, req any) (any, error) {
 		p := req.(*UpdatePayload)
@@ -67,7 +67,7 @@ func NewUpdateEndpoint(s Service) goa.Endpoint {
 }
 
 // NewDeleteEndpoint returns an endpoint function that calls the method
-// "delete" of service "exercise".
+// "delete" of service "exercises".
 func NewDeleteEndpoint(s Service) goa.Endpoint {
 	return func(ctx context.Context, req any) (any, error) {
 		p := req.(*DeletePayload)
