# backend/gen/http/exercise/server/paths.go
@@ -1,32 +1,0 @@
-// Code generated by goa v3.23.3, DO NOT EDIT.
-//
-// HTTP request path constructors for the exercise service.
-//
-// Command:
-// $ goa gen github.com/GrudTrigger/training_tracker/backend/design
-
-package server
-
-import (
-	"fmt"
-)
-
-// CreateExercisePath returns the URL path to the exercise service create HTTP endpoint.
-func CreateExercisePath() string {
-	return "/exercise"
-}
-
-// AllExercisePath returns the URL path to the exercise service all HTTP endpoint.
-func AllExercisePath() string {
-	return "/exercise/all"
-}
-
-// UpdateExercisePath returns the URL path to the exercise service update HTTP endpoint.
-func UpdateExercisePath() string {
-	return "/exercise/update"
-}
-
-// DeleteExercisePath returns the URL path to the exercise service delete HTTP endpoint.
-func DeleteExercisePath(exerciseID string) string {
-	return fmt.Sprintf("/exercise/%v", exerciseID)
-}
