# backend/gen/http/exercises/server/encode_decode.go
@@ -1,6 +1,6 @@
 // Code generated by goa v3.23.3, DO NOT EDIT.
 //
-// exercise HTTP server encoders and decoders
+// exercises HTTP server encoders and decoders
 //
 // Command:
 // $ goa gen github.com/GrudTrigger/training_tracker/backend/design
@@ -14,16 +14,16 @@ import (
 	"net/http"
 	"strconv"
 
-	exercise "github.com/GrudTrigger/training_tracker/backend/gen/exercise"
+	exercises "github.com/GrudTrigger/training_tracker/backend/gen/exercises"
 	goahttp "goa.design/goa/v3/http"
 	goa "goa.design/goa/v3/pkg"
 )
 
 // EncodeCreateResponse returns an encoder for responses returned by the
-// exercise create endpoint.
+// exercises create endpoint.
 func EncodeCreateResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, any) error {
 	return func(ctx context.Context, w http.ResponseWriter, v any) error {
-		res, _ := v.(*exercise.ExerciseList)
+		res, _ := v.(*exercises.Exercises)
 		enc := encoder(ctx, w)
 		body := NewCreateResponseBody(res)
 		w.WriteHeader(http.StatusCreated)
@@ -31,10 +31,10 @@ func EncodeCreateResponse(encoder func(context.Context, http.ResponseWriter) goa
 	}
 }
 
-// DecodeCreateRequest returns a decoder for requests sent to the exercise
+// DecodeCreateRequest returns a decoder for requests sent to the exercises
 // create endpoint.
-func DecodeCreateRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (*exercise.ExerciseListPayload, error) {
-	return func(r *http.Request) (*exercise.ExerciseListPayload, error) {
+func DecodeCreateRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (*exercises.ExercisePayload, error) {
+	return func(r *http.Request) (*exercises.ExercisePayload, error) {
 		var (
 			body CreateRequestBody
 			err  error
@@ -54,14 +54,14 @@ func DecodeCreateRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.
 		if err != nil {
 			return nil, err
 		}
-		payload := NewCreateExerciseListPayload(&body)
+		payload := NewCreateExercisePayload(&body)
 
 		return payload, nil
 	}
 }
 
 // EncodeCreateError returns an encoder for errors returned by the create
-// exercise endpoint.
+// exercises endpoint.
 func EncodeCreateError(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder, formatter func(ctx context.Context, err error) goahttp.Statuser) func(context.Context, http.ResponseWriter, error) error {
 	encodeError := goahttp.ErrorEncoder(encoder, formatter)
 	return func(ctx context.Context, w http.ResponseWriter, v error) error {
@@ -89,11 +89,11 @@ func EncodeCreateError(encoder func(context.Context, http.ResponseWriter) goahtt
 	}
 }
 
-// EncodeAllResponse returns an encoder for responses returned by the exercise
+// EncodeAllResponse returns an encoder for responses returned by the exercises
 // all endpoint.
 func EncodeAllResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, any) error {
 	return func(ctx context.Context, w http.ResponseWriter, v any) error {
-		res, _ := v.([]*exercise.ExerciseList)
+		res, _ := v.([]*exercises.Exercises)
 		enc := encoder(ctx, w)
 		body := NewAllResponseBody(res)
 		w.WriteHeader(http.StatusOK)
@@ -101,10 +101,10 @@ func EncodeAllResponse(encoder func(context.Context, http.ResponseWriter) goahtt
 	}
 }
 
-// DecodeAllRequest returns a decoder for requests sent to the exercise all
+// DecodeAllRequest returns a decoder for requests sent to the exercises all
 // endpoint.
-func DecodeAllRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (*exercise.AllPayload, error) {
-	return func(r *http.Request) (*exercise.AllPayload, error) {
+func DecodeAllRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (*exercises.AllPayload, error) {
+	return func(r *http.Request) (*exercises.AllPayload, error) {
 		var (
 			limit  int
 			offset int
@@ -149,10 +149,10 @@ func DecodeAllRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Dec
 }
 
 // EncodeUpdateResponse returns an encoder for responses returned by the
-// exercise update endpoint.
+// exercises update endpoint.
 func EncodeUpdateResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, any) error {
 	return func(ctx context.Context, w http.ResponseWriter, v any) error {
-		res, _ := v.(*exercise.ExerciseList)
+		res, _ := v.(*exercises.Exercises)
 		enc := encoder(ctx, w)
 		body := NewUpdateResponseBody(res)
 		w.WriteHeader(http.StatusOK)
@@ -160,10 +160,10 @@ func EncodeUpdateResponse(encoder func(context.Context, http.ResponseWriter) goa
 	}
 }
 
-// DecodeUpdateRequest returns a decoder for requests sent to the exercise
+// DecodeUpdateRequest returns a decoder for requests sent to the exercises
 // update endpoint.
-func DecodeUpdateRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (*exercise.UpdatePayload, error) {
-	return func(r *http.Request) (*exercise.UpdatePayload, error) {
+func DecodeUpdateRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (*exercises.UpdatePayload, error) {
+	return func(r *http.Request) (*exercises.UpdatePayload, error) {
 		var (
 			body UpdateRequestBody
 			err  error
@@ -190,7 +190,7 @@ func DecodeUpdateRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.
 }
 
 // EncodeUpdateError returns an encoder for errors returned by the update
-// exercise endpoint.
+// exercises endpoint.
 func EncodeUpdateError(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder, formatter func(ctx context.Context, err error) goahttp.Statuser) func(context.Context, http.ResponseWriter, error) error {
 	encodeError := goahttp.ErrorEncoder(encoder, formatter)
 	return func(ctx context.Context, w http.ResponseWriter, v error) error {
@@ -232,7 +232,7 @@ func EncodeUpdateError(encoder func(context.Context, http.ResponseWriter) goahtt
 }
 
 // EncodeDeleteResponse returns an encoder for responses returned by the
-// exercise delete endpoint.
+// exercises delete endpoint.
 func EncodeDeleteResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, any) error {
 	return func(ctx context.Context, w http.ResponseWriter, v any) error {
 		w.WriteHeader(http.StatusNoContent)
@@ -240,10 +240,10 @@ func EncodeDeleteResponse(encoder func(context.Context, http.ResponseWriter) goa
 	}
 }
 
-// DecodeDeleteRequest returns a decoder for requests sent to the exercise
+// DecodeDeleteRequest returns a decoder for requests sent to the exercises
 // delete endpoint.
-func DecodeDeleteRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (*exercise.DeletePayload, error) {
-	return func(r *http.Request) (*exercise.DeletePayload, error) {
+func DecodeDeleteRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (*exercises.DeletePayload, error) {
+	return func(r *http.Request) (*exercises.DeletePayload, error) {
 		var (
 			exerciseID string
 			err        error
@@ -262,7 +262,7 @@ func DecodeDeleteRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.
 }
 
 // EncodeDeleteError returns an encoder for errors returned by the delete
-// exercise endpoint.
+// exercises endpoint.
 func EncodeDeleteError(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder, formatter func(ctx context.Context, err error) goahttp.Statuser) func(context.Context, http.ResponseWriter, error) error {
 	encodeError := goahttp.ErrorEncoder(encoder, formatter)
 	return func(ctx context.Context, w http.ResponseWriter, v error) error {
@@ -290,10 +290,10 @@ func EncodeDeleteError(encoder func(context.Context, http.ResponseWriter) goahtt
 	}
 }
 
-// marshalExerciseExerciseListToExerciseListResponse builds a value of type
-// *ExerciseListResponse from a value of type *exercise.ExerciseList.
-func marshalExerciseExerciseListToExerciseListResponse(v *exercise.ExerciseList) *ExerciseListResponse {
-	res := &ExerciseListResponse{
+// marshalExercisesExercisesToExercisesResponse builds a value of type
+// *ExercisesResponse from a value of type *exercises.Exercises.
+func marshalExercisesExercisesToExercisesResponse(v *exercises.Exercises) *ExercisesResponse {
+	res := &ExercisesResponse{
 		ID:          v.ID,
 		Title:       v.Title,
 		MuscleGroup: v.MuscleGroup,
