# backend/gen/http/exercises/server/paths.go
@@ -1,0 +1,32 @@
+// Code generated by goa v3.23.3, DO NOT EDIT.
+//
+// HTTP request path constructors for the exercises service.
+//
+// Command:
+// $ goa gen github.com/GrudTrigger/training_tracker/backend/design
+
+package server
+
+import (
+	"fmt"
+)
+
+// CreateExercisesPath returns the URL path to the exercises service create HTTP endpoint.
+func CreateExercisesPath() string {
+	return "/exercise"
+}
+
+// AllExercisesPath returns the URL path to the exercises service all HTTP endpoint.
+func AllExercisesPath() string {
+	return "/exercise/all"
+}
+
+// UpdateExercisesPath returns the URL path to the exercises service update HTTP endpoint.
+func UpdateExercisesPath() string {
+	return "/exercise/update"
+}
+
+// DeleteExercisesPath returns the URL path to the exercises service delete HTTP endpoint.
+func DeleteExercisesPath(exerciseID string) string {
+	return fmt.Sprintf("/exercise/%v", exerciseID)
+}
