# backend/gen/http/exercises/server/server.go
@@ -1,6 +1,6 @@
 // Code generated by goa v3.23.3, DO NOT EDIT.
 //
-// exercise HTTP server
+// exercises HTTP server
 //
 // Command:
 // $ goa gen github.com/GrudTrigger/training_tracker/backend/design
@@ -11,12 +11,12 @@ import (
 	"context"
 	"net/http"
 
-	exercise "github.com/GrudTrigger/training_tracker/backend/gen/exercise"
+	exercises "github.com/GrudTrigger/training_tracker/backend/gen/exercises"
 	goahttp "goa.design/goa/v3/http"
 	goa "goa.design/goa/v3/pkg"
 )
 
-// Server lists the exercise service endpoint HTTP handlers.
+// Server lists the exercises service endpoint HTTP handlers.
 type Server struct {
 	Mounts []*MountPoint
 	Create http.Handler
@@ -36,14 +36,14 @@ type MountPoint struct {
 	Pattern string
 }
 
-// New instantiates HTTP handlers for all the exercise service endpoints using
+// New instantiates HTTP handlers for all the exercises service endpoints using
 // the provided encoder and decoder. The handlers are mounted on the given mux
 // using the HTTP verb and path defined in the design. errhandler is called
 // whenever a response fails to be encoded. formatter is used to format errors
 // returned by the service methods prior to encoding. Both errhandler and
 // formatter are optional and can be nil.
 func New(
-	e *exercise.Endpoints,
+	e *exercises.Endpoints,
 	mux goahttp.Muxer,
 	decoder func(*http.Request) goahttp.Decoder,
 	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
@@ -65,7 +65,7 @@ func New(
 }
 
 // Service returns the name of the service served.
-func (s *Server) Service() string { return "exercise" }
+func (s *Server) Service() string { return "exercises" }
 
 // Use wraps the server handlers with the given middleware.
 func (s *Server) Use(m func(http.Handler) http.Handler) {
@@ -76,9 +76,9 @@ func (s *Server) Use(m func(http.Handler) http.Handler) {
 }
 
 // MethodNames returns the methods served.
-func (s *Server) MethodNames() []string { return exercise.MethodNames[:] }
+func (s *Server) MethodNames() []string { return exercises.MethodNames[:] }
 
-// Mount configures the mux to serve the exercise endpoints.
+// Mount configures the mux to serve the exercises endpoints.
 func Mount(mux goahttp.Muxer, h *Server) {
 	MountCreateHandler(mux, h.Create)
 	MountAllHandler(mux, h.All)
@@ -86,12 +86,12 @@ func Mount(mux goahttp.Muxer, h *Server) {
 	MountDeleteHandler(mux, h.Delete)
 }
 
-// Mount configures the mux to serve the exercise endpoints.
+// Mount configures the mux to serve the exercises endpoints.
 func (s *Server) Mount(mux goahttp.Muxer) {
 	Mount(mux, s)
 }
 
-// MountCreateHandler configures the mux to serve the "exercise" service
+// MountCreateHandler configures the mux to serve the "exercises" service
 // "create" endpoint.
 func MountCreateHandler(mux goahttp.Muxer, h http.Handler) {
 	f, ok := h.(http.HandlerFunc)
@@ -104,7 +104,7 @@ func MountCreateHandler(mux goahttp.Muxer, h http.Handler) {
 }
 
 // NewCreateHandler creates a HTTP handler which loads the HTTP request and
-// calls the "exercise" service "create" endpoint.
+// calls the "exercises" service "create" endpoint.
 func NewCreateHandler(
 	endpoint goa.Endpoint,
 	mux goahttp.Muxer,
@@ -121,7 +121,7 @@ func NewCreateHandler(
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
 		ctx = context.WithValue(ctx, goa.MethodKey, "create")
-		ctx = context.WithValue(ctx, goa.ServiceKey, "exercise")
+		ctx = context.WithValue(ctx, goa.ServiceKey, "exercises")
 		payload, err := decodeRequest(r)
 		if err != nil {
 			if err := encodeError(ctx, w, err); err != nil && errhandler != nil {
@@ -144,7 +144,7 @@ func NewCreateHandler(
 	})
 }
 
-// MountAllHandler configures the mux to serve the "exercise" service "all"
+// MountAllHandler configures the mux to serve the "exercises" service "all"
 // endpoint.
 func MountAllHandler(mux goahttp.Muxer, h http.Handler) {
 	f, ok := h.(http.HandlerFunc)
@@ -157,7 +157,7 @@ func MountAllHandler(mux goahttp.Muxer, h http.Handler) {
 }
 
 // NewAllHandler creates a HTTP handler which loads the HTTP request and calls
-// the "exercise" service "all" endpoint.
+// the "exercises" service "all" endpoint.
 func NewAllHandler(
 	endpoint goa.Endpoint,
 	mux goahttp.Muxer,
@@ -174,7 +174,7 @@ func NewAllHandler(
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
 		ctx = context.WithValue(ctx, goa.MethodKey, "all")
-		ctx = context.WithValue(ctx, goa.ServiceKey, "exercise")
+		ctx = context.WithValue(ctx, goa.ServiceKey, "exercises")
 		payload, err := decodeRequest(r)
 		if err != nil {
 			if err := encodeError(ctx, w, err); err != nil && errhandler != nil {
@@ -197,7 +197,7 @@ func NewAllHandler(
 	})
 }
 
-// MountUpdateHandler configures the mux to serve the "exercise" service
+// MountUpdateHandler configures the mux to serve the "exercises" service
 // "update" endpoint.
 func MountUpdateHandler(mux goahttp.Muxer, h http.Handler) {
 	f, ok := h.(http.HandlerFunc)
@@ -210,7 +210,7 @@ func MountUpdateHandler(mux goahttp.Muxer, h http.Handler) {
 }
 
 // NewUpdateHandler creates a HTTP handler which loads the HTTP request and
-// calls the "exercise" service "update" endpoint.
+// calls the "exercises" service "update" endpoint.
 func NewUpdateHandler(
 	endpoint goa.Endpoint,
 	mux goahttp.Muxer,
@@ -227,7 +227,7 @@ func NewUpdateHandler(
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
 		ctx = context.WithValue(ctx, goa.MethodKey, "update")
-		ctx = context.WithValue(ctx, goa.ServiceKey, "exercise")
+		ctx = context.WithValue(ctx, goa.ServiceKey, "exercises")
 		payload, err := decodeRequest(r)
 		if err != nil {
 			if err := encodeError(ctx, w, err); err != nil && errhandler != nil {
@@ -250,7 +250,7 @@ func NewUpdateHandler(
 	})
 }
 
-// MountDeleteHandler configures the mux to serve the "exercise" service
+// MountDeleteHandler configures the mux to serve the "exercises" service
 // "delete" endpoint.
 func MountDeleteHandler(mux goahttp.Muxer, h http.Handler) {
 	f, ok := h.(http.HandlerFunc)
@@ -263,7 +263,7 @@ func MountDeleteHandler(mux goahttp.Muxer, h http.Handler) {
 }
 
 // NewDeleteHandler creates a HTTP handler which loads the HTTP request and
-// calls the "exercise" service "delete" endpoint.
+// calls the "exercises" service "delete" endpoint.
 func NewDeleteHandler(
 	endpoint goa.Endpoint,
 	mux goahttp.Muxer,
@@ -280,7 +280,7 @@ func NewDeleteHandler(
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
 		ctx = context.WithValue(ctx, goa.MethodKey, "delete")
-		ctx = context.WithValue(ctx, goa.ServiceKey, "exercise")
+		ctx = context.WithValue(ctx, goa.ServiceKey, "exercises")
 		payload, err := decodeRequest(r)
 		if err != nil {
 			if err := encodeError(ctx, w, err); err != nil && errhandler != nil {
